# rusty-genius

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.agent/rules/: system-prompt.md
.antigravity/rules/: environment.md
.cargo/: config.toml
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: code-review.yml  release-plz.yml  release.yml
.github/workflows-saved/: code-review.yml  core-review-antropicapi.yml  release.yml
crates/brainstem/: CHANGELOG.md  Cargo.toml
crates/brainstem/src/: context_worker.rs  embedder.rs  engine_wllama.rs  lib.rs  memory_tools.rs  redis_store.rs
crates/brainstem/tests/: wllama_tests.rs
crates/brainteaser/: CHANGELOG.md  Cargo.toml
crates/brainteaser/fixtures/Qwen/Qwen2.5-1.5B-Instruct/Q4_K_M/: hello.md
crates/brainteaser/src/: lib.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: context.rs  cosine.rs  engine.rs  error.rs  lib.rs  manifest.rs  memory.rs  protocol.rs  tools.rs
crates/cortex/: CHANGELOG.md  Cargo.toml
crates/cortex/src/: backend.rs  lib.rs
crates/cortex/src/backend/: engine_genai.rs  engine_llamacpp.rs  engine_mlx.rs  engine_real.rs  engine_stub.rs  mod.rs
crates/cortex/src/backend/qwen35/: attention_full.rs  attention_linear.rs  cache.rs  layer.rs  mlp.rs  mod.rs  model.rs  rope.rs
crates/cortex/tests/: engine_tests.rs  genai_tests.rs
crates/facecrab/: CHANGELOG.md  Cargo.toml
crates/facecrab/examples/: downloader.rs
crates/facecrab/src/: assets.rs  lib.rs  models.toml  registry.rs
crates/genius/: CHANGELOG.md  Cargo.toml  example.sh
crates/genius/examples/: basic_chat.rs  thinker_tui.rs
crates/genius/src/: lib.rs
crates/genius/tests/: engine_modes.rs
crates/gyrus/: Cargo.toml  SCHEMA.md
crates/gyrus/src/: cosine.rs  error.rs  lib.rs  schema.rs  sqlite_store.rs  traits.rs  types.rs
crates/hippocampus/: Cargo.toml
crates/hippocampus/src/: cosine.rs  fts.rs  idb.rs  lib.rs  schema.rs  store.rs  wrapper.rs
crates/hippocampus/tests/: wasm_tests.rs
crates/neocortex/: Cargo.toml
crates/neocortex/src/: adapter.rs  lib.rs  schema.rs  store.rs
crates/neocortex/tests/: priming_tests.rs  sqlite_store_tests.rs  worker_tests.rs
crates/ogenius/: CHANGELOG.md  Cargo.toml
crates/ogenius/docs/: API.md
crates/ogenius/src/: api.rs  index-testing.html  index.html  main.rs
crates/ogenius/tests/: http_tests.rs
crates/pfc/: Cargo.toml
crates/pfc/src/: bootstrap.rs  lib.rs  store.rs
crates/pfc/tests/: worker_tests.rs
crates/striatum/: Cargo.toml
crates/striatum/src/: bootstrap.rs  context_store.rs  lib.rs  store.rs
crates/thinkerv1/: Cargo.toml
crates/thinkerv1-client/: Cargo.toml
crates/thinkerv1-client/src/: lib.rs
crates/thinkerv1/src/: lib.rs
crates/wasm-guest/: Cargo.toml
crates/wasm-guest/src/: lib.rs
docs/: REVIEW.md  TERMS.md  THINKER_TUI.md  WASM.md
scripts/: example.sh  fix.sh  manual-release.sh  metal-raw.sh  metal.sh  pinky.sh  verify_list_models.sh
scripts/packaging/: bump-version.sh  manual-release.sh  publish-order.sh  update-site-crates.sh
site/: index.html
