[workspace]
members = [
    "crates/core",
    "crates/facecrab",
    "crates/cortex",
    "crates/brainstem",
    "crates/genius",
    "crates/brainteaser"
, "crates/ogenius"]
default-members = ["crates/genius"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Timothy Meade"]
license = "MIT"
repository = "https://github.com/tmzt/rusty-genius"
homepage = "https://tmzt.github.io/rusty-genius/"
keywords = ["ai", "llm", "local-first", "inference", "async-std"]
categories = ["science", "algorithms", "asynchronous"]
publish = true
