[package]
name = "rusty-genius-stem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Orchestrator and event loop for rusty-genius"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.0" }
facecrab = { path = "../facecrab", version = "0.1.0" }
rusty-genius-cortex = { path = "../cortex", version = "0.1.0" }
anyhow = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
