[package]
name = "rusty-genius-stem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Orchestrator and event loop for rusty-genius"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.3" }
facecrab = { path = "../facecrab", version = "0.1.3", optional = true }
rusty-genius-cortex = { path = "../cortex", version = "0.1.3", optional = true }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
futures-timer = "3"
wasmtime = { version = "42", optional = true }
wasmtime-wasi = { version = "42", optional = true }
rusty-genius-striatum = { path = "../striatum", version = "0.1.3", optional = true }
rusty-genius-pfc = { path = "../pfc", version = "0.1.3", optional = true }
rusty-genius-neocortex = { path = "../neocortex", version = "0.1.3", optional = true }

[dev-dependencies]
smol = "2"

[features]
default = ["cortex-engine"]
cortex-engine = ["dep:rusty-genius-cortex", "dep:facecrab"]
wllama = ["dep:wasmtime", "dep:wasmtime-wasi"]
genai = ["rusty-genius-cortex/genai", "cortex-engine"]
redis-context = ["dep:rusty-genius-striatum"]
pfc = ["dep:rusty-genius-pfc"]
neocortex = ["dep:rusty-genius-neocortex"]
llamacpp = ["cortex-engine", "rusty-genius-cortex/llamacpp"]
memory = ["pfc", "neocortex"]
