[package]
name = "rusty-genius-teaser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing harness and verification for rusty-genius"
publish.workspace = true

[dependencies]
rusty-genius = { path = "../genius", version = "0.1.0" }
rusty-genius-core = { path = "../core", version = "0.1.0" }
rusty-genius-cortex = { path = "../cortex", version = "0.1.0" }
anyhow = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"

[features]
real-engine = ["rusty-genius-cortex/real-engine"]
metal = ["rusty-genius-cortex/metal", "real-engine"]
cuda = ["rusty-genius-cortex/cuda", "real-engine"]
vulkan = ["rusty-genius-cortex/vulkan", "real-engine"]
