[package]
name = "rusty-genius-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and protocol definitions for rusty-genius"
publish.workspace = true

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
