[package]
name = "rusty-genius-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and protocol definitions for rusty-genius"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
anyhow = "1.0"
futures-channel = "0.3"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
serde_json = "1.0"
