[package]
name = "rusty-genius-cortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inference engine interaction layer for rusty-genius"
readme = "../../README.md"
keywords = ["ai", "llm", "llama-cpp", "gguf", "inference"]
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.3" }
anyhow = "1.0"
smol = "2"
futures = "0.3"
async-trait = "0.1"
llama-cpp-2 = { version = "=0.1.139", optional = true, features = ["sampler"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
mlx-rs = { version = "0.25", optional = true, features = ["metal", "accelerate"] }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }

# surf backend is target-conditional: native uses h1-client-rustls, WASM uses wasm-client
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2", optional = true, default-features = false, features = ["h1-client-rustls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = { version = "2", optional = true, default-features = false, features = ["wasm-client"] }

[features]
default = []
real-engine = ["dep:llama-cpp-2"]
metal = ["llama-cpp-2/metal", "real-engine"]
cuda = ["llama-cpp-2/cuda", "real-engine"]
vulkan = ["llama-cpp-2/vulkan", "real-engine"]
genai = ["dep:surf", "dep:serde", "dep:serde_json"]
mlx = ["dep:mlx-rs", "dep:hf-hub", "dep:tokenizers", "dep:serde", "dep:serde_json"]

[dev-dependencies]
smol-potat = "1"
serde_json = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
