[package]
name = "facecrab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Asset management and model downloading for rusty-genius"
readme = "../../README.md"
keywords = ["ai", "llm", "huggingface", "download", "models"]
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.1" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
surf = "2.3"
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
