[package]
name = "rusty-genius"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Public facade for rusty-genius"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.3" }
facecrab = { path = "../facecrab", version = "0.1.3", optional = true }
rusty-genius-stem = { path = "../brainstem", version = "0.1.3" }
rusty-genius-cortex = { path = "../cortex", version = "0.1.3", optional = true }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
anyhow = "1.0"

[features]
default = ["cortex-engine"]
cortex-engine = ["dep:rusty-genius-cortex", "dep:facecrab", "rusty-genius-stem/cortex-engine"]
wllama = ["rusty-genius-stem/wllama"]
metal = ["rusty-genius-cortex/metal", "real-engine"]
cuda = ["rusty-genius-cortex/cuda", "real-engine"]
vulkan = ["rusty-genius-cortex/vulkan", "real-engine"]
real-engine = ["rusty-genius-cortex/real-engine", "cortex-engine"]
genai = ["rusty-genius-stem/genai"]
redis-context = ["rusty-genius-stem/redis-context"]
