[package]
name = "gyrus"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed memory store with FTS5 and optional vector similarity"
license = "MIT"

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.3" }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-async-std", "sqlite"] }
sqlite-vec = { version = "0.1", optional = true }

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }

[features]
default = []
vec0 = ["dep:sqlite-vec"]
