[package]
name = "rusty-genius-hippocampus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser-persistent memory (Hippocampus) for rusty-genius — IndexedDB + SQLite FTS5"
readme = "../../README.md"
keywords = ["ai", "memory", "wasm", "indexeddb", "fts5"]
categories.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.3" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
rexie = "0.6"
sqlite-wasm-rs = { version = "0.5", features = ["bindgen"] }
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
