[package]
name = "rusty-genius-neocortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Long-term memory (Neocortex) for rusty-genius"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.3" }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-async-std", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite-vec = { version = "0.1", optional = true }

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
rusty-genius-pfc = { path = "../pfc", version = "0.1.3" }

[features]
default = []
vec0 = ["dep:sqlite-vec"]
