[package]
name = "rusty-genius-neocortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Long-term memory (Neocortex) for rusty-genius"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.3" }
gyrus = { path = "../gyrus", version = "0.1.0" }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde_json = "1.0"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
rusty-genius-pfc = { path = "../pfc", version = "0.1.3" }

[features]
default = []
vec0 = ["gyrus/vec0"]
