[package]
name = "ogenius"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius = { path = "../genius", version = "0.1.3" }
rusty-genius-core = { path = "../core", version = "0.1.3" }
rusty-genius-stem = { path = "../brainstem", version = "0.1.3" }
facecrab = { path = "../facecrab", version = "0.1.3" }
clap = { version = "4.4", features = ["derive"] }
tide = "0.16"
tide-websockets = "0.4"
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
surf = "2.3"
indicatif = "0.18.3"
ctrlc = "3.5.1"

[dev-dependencies]

[features]
default = []
metal = ["rusty-genius/metal"]
cuda = ["rusty-genius/cuda"]
vulkan = ["rusty-genius/vulkan"]
