[package]
name = "rusty-genius-pfc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Short-term memory (PFC) for rusty-genius"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.3" }
rusty-genius-striatum = { path = "../striatum", version = "0.1.3" }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
