[package]
name = "rusty-genius-striatum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis-backed memory search and indexing for rusty-genius"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rusty-genius-core = { path = "../core", version = "0.1.3" }
async-trait = "0.1"
redis = { version = "1.0", features = ["smol-comp", "script"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
smol = "2"
