[package]
name = "rusty-genius-thinkerv1-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A smol-based client for the Thinkerv1 protocol."
repository = "https://github.com/a-t-me/rusty-genius"

[dependencies]
rusty-genius-thinkerv1 = { path = "../thinkerv1" }
smol = "2.0"
async-net = "2.0"
async-process = "2.2"
futures-lite = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-channel = "1.9.0"
async-dup = "1.2.2"
futures = "0.3"
